          On Unix, create the full/ directory during `make installdirs'.

1998-12-21  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * stream.d (FILE-POSITION): Accept any integer >= 0, < 2^32, not only
          fixnums.

1998-12-21  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * stream.d (SOCKET-SERVER, publish_host_data): Remove call to
          undeclared function `bzero'.
        * socket.d (create_server_socket, socket_getpeername,
          socket_getlocalname): Move to here.

1998-12-21  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * loop.lsp (expand-loop): Generalize 1998-11-05 patch: The FOR
          FROM/TO/BY clauses can come in any order. Make sure the order of
          evaluation is preserved.

1998-12-20  Sam Steingold  <sds@goems.com>

	* _clisp.c (main): accept an '-F' argument to run the full version
	of CLISP (with modules).
	* spvw.d (usage): mention -F.
	* makemake.in: install the full CLISP version too.
	* _distmakefile: ditto.

1998-12-18  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * makemake.in (clean7): Add "rm -f -r bindings clx queens regexp
          wildcard".

1998-12-18  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * lispbibl.d (strm_len): Correct definition, was one too large if
          not compiling with gcc.
          (stream_xlength, Stream_xlength): New macros.
          (allocate_stream): One more argument.
        * spvw_typealloc.d (allocate_stream): Likewise.
        * stream.d (make_handle_stream, make_keyboard_stream,
          make_terminal_stream_, SYS::MAKE-WINDOW): One more argument to
          `allocate-stream'.
          (strm_file_extrafields_struct, strm_ch_file_extrafields_struct,
          strm_i_file_extrafields_struct): New structures.
          (strm_file_buffstart): Remove macro.
          (FileStream_buffstart): New macro.
          (strm_file_eofindex): Remove macro.